--- a/css/normalize.css
+++ b/css/normalize.css
@@ -4,6 +4,8 @@
    ========================================================================== */
 
 /**
+ * The purpose of this file is to make the following default adjustments.
+ * 
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
