--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,8 @@
-main {
-    border: 5px solid black;
-    width: 500px;
-    height: 500px;
-    margin-left: 10px;
+html, body {
+    width: 100%;
+    height: 100%;
 }
 
-#controller {
-    border: 1px solid black;
-    width: 504px;
-    margin-left: 10px;
-    padding: 2px;
-}
-
-#dude {
-    border: 1px solid purple;
-    color: white;
-    background: purple;
+canvas {
+    display: block;
 }
